--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "loader-quark": "^1.0.1",
+    "notification-quark": "^1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-material-design-icons": "^5.3.0",
