--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tiptap/extension-highlight": "^2.2.4",
+    "@tiptap/extension-image": "^2.2.4",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/extension-text-align": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "@tiptap/vue-3": "^2.2.4",
     "axios": "^1.6.7",
     "loader-quark": "^1.0.1",
     "notification-quark": "^1.0.1",
     "pinia": "^2.1.7",
+    "swiper": "^11.0.7",
     "vue": "^3.4.15",
     "vue-material-design-icons": "^5.3.0",
     "vue-router": "^4.2.5"
