--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,7 +38,7 @@ uvicorn==0.27.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
-bcrypt
+bcrypt==4.1.2
 python-jose[cryptography]
 passlib[bcrypt]
 python-multipart
