--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,7 +34,7 @@ SQLAlchemy==2.0.25
 starlette==0.35.1
 typing_extensions==4.9.0
 ujson==5.9.0
-uvicorn==0.27.0.post1
+uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
